--- a/Ex02_FacebookApp/Ex02_FacebookApp.csproj
+++ b/Ex02_FacebookApp/Ex02_FacebookApp.csproj
@@ -80,6 +80,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sorter.cs" />
     <EmbeddedResource Include="FacebookForm.resx">
       <DependentUpon>FacebookForm.cs</DependentUpon>
     </EmbeddedResource>
